--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/throttler": "^6.4.0",
+    "argon2": "^0.44.0",
+    "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.1",
